# rdk-wifi

./: CONTRIBUTING.md  Makefile.am  NOTICE  README  configure.ac  rdk_build.sh  rdk_env.xml
cfg/: TODO
include/: wifi_ap_hal.h  wifi_client_hal.h  wifi_common_hal.h
src/: Makefile.am  wifi_client_hal.c  wifi_client_hal_priv.h  wifi_common_hal.c  wifi_hal_priv.h  wifi_hal_test.c  wifi_linux_wireless.c  wifi_log.h
test/: Makefile.am  connect.c  switch_interfaces.c  testwifi.c
test/gtest/: Makefile.am  gtest_main.cpp  parser.cpp
